Basics/[02]Version Control with Git/04. Add Commits to a Repo.md updated from https://stackedit.io/

--- a/Basics/[02]Version Control with Git/04. Add Commits to a Repo.md
+++ b/Basics/[02]Version Control with Git/04. Add Commits to a Repo.md
@@ -528,7 +528,7 @@ As I've mentioned, there are a number of ways to write commit messages. If you'r
 
 If you haven't chosen a commit message style, feel free to use ours. But if you're working on an existing project, use their existing style; it's much more important to be consistent with your actual team than to be consistent with us!
 
-# Command: `Git Diff`
+# Command: `git diff`
 
 ## Why Do We Need This
 
@@ -655,5 +655,6 @@ To recap, the  `.gitignore`  file is used to tell Git about the files that Git s
 -   [Ignoring files](https://help.github.com/articles/ignoring-files/)  from the GitHub Docs
 -   [gitignore.io](https://www.gitignore.io/)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTYwMjI4NjRdfQ==
+eyJoaXN0b3J5IjpbLTEzMzEwNDQyNDAsLTEwMTYwMjI4NjRdfQ
+==
 -->
